Bug 1894935 - Propagate flip modes through popuppositioned r=emilio!

Adds attributes to the popuppositioned event that report
whether vertical flip and/or horizontal flip modes were
used in the positioning of the popup.

Differential Revision: https://phabricator.services.mozilla.com/D209395